--- a/css/customCss.css
+++ b/css/customCss.css
@@ -4,7 +4,8 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    font-family: Raleway, Open Sans, Droid Sans, Roboto, arial, sans-serif;
+    font-family: Microsoft YaHei, sans-serif;
+    overflow: hidden;
 }
 
 .blurred-bg {
