--- a/css/customCss.css
+++ b/css/customCss.css
@@ -32,7 +32,7 @@ body {
 
 .box {
     width: 320px;
-    height: 240px;
+    height: auto;
     left: -webkit-calc(50% - 250px);
     top: 20%;
     position: absolute;
