--- a/css/customCss.css
+++ b/css/customCss.css
@@ -1,6 +1,6 @@
 /**自定义样式 */
 body {
-    background-image: url("../images/normal.jpg");
+    /*background-image: url("../images/normal.jpg");*/
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -9,7 +9,7 @@ body {
 }
 
 .blurred-bg {
-    background-image: url("../images/blur.jpg");
+   /* background-image: url("../images/blur.jpg");*/
     background-repeat: no-repeat;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -54,18 +54,23 @@ body {
 }
 
 h1, h2, a, p {
-    color: white;
+    color: red;
     font-weight: 100;
 }
 
-.tinted h1, .tinted h2, .tinted a, .tinted p {
+.tinted h1, .tinted h2, .tinted h2, .tinted a, .tinted p {
     color: black;
     text-shadow: 0 1px 1px rgba(255, 255, 255, 0.2);
 }
 
-h2 {
+h2, h4 {
     font-size: 14px;
 }
+
+
+b {
+     font-size: 10px;
+ }
 
 p {
     margin: 20px;
